# connect4_versus_ia

./: pyproject.toml
connect4/: backend.py  main.py  test.py
